# chachi_bt_finance

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/stock_data/: data_extraction.py  langchain_tools.py  test_yfinance.py
